[SP-71] Implemented unauthorized error handler.

--- a/lib/app.component.html
+++ b/lib/app.component.html
@@ -12,6 +12,7 @@
 
     <div class="content">
         <router-outlet></router-outlet>
+        <sp-unauthorized-error></sp-unauthorized-error>
     </div>
 
 </sp-main>
