--- a/lib/shared/components/controls/dialog/dialog.component.html
+++ b/lib/shared/components/controls/dialog/dialog.component.html
@@ -4,7 +4,7 @@
         <ng-content select=".content"></ng-content>
     </div>
     <div class="mdl-dialog__actions">
-        <button *ngFor="let action of actions" (click)="execute(action)" type="button" class="mdl-button">
+        <button *ngFor="let action of actions" (click)="action.execute()" type="button" class="mdl-button">
             {{action.title}}
         </button>
     </div>
