[SP-73] Initial unhadled error dialog implementation

--- a/lib/app.component.html
+++ b/lib/app.component.html
@@ -13,6 +13,7 @@
     <div class="content">
         <router-outlet></router-outlet>
         <sp-unauthorized-error></sp-unauthorized-error>
+        <sp-unhandled-error></sp-unhandled-error>
     </div>
 
 </sp-main>
