[SP-91] Added tests for login component

--- a/lib/account-management/login/login.component.html
+++ b/lib/account-management/login/login.component.html
@@ -25,8 +25,8 @@
         </form>
 
         <div class="extra-actions">
-            <sp-link [routerLink]="['SignUp']" label="Create account"></sp-link>
-            <sp-link [routerLink]="['RestoreAccess']" label="Forgot password?"></sp-link>
+            <sp-link name="sign-up" [routerLink]="['SignUp']" label="Create account"></sp-link>
+            <sp-link name="restore-access" [routerLink]="['RestoreAccess']" label="Forgot password?"></sp-link>
         </div>
     </sp-card>
 </div>
