[ SP-104]  Added on close handler for dialogs

--- a/lib/errors/unhadled/unhandled-error.component.html
+++ b/lib/errors/unhadled/unhandled-error.component.html
@@ -1,4 +1,4 @@
-<sp-dialog title="Oops! An error occurred!" [actions]="dialogActions">
+<sp-dialog title="Oops! An error occurred!" [actions]="dialogActions" (close)="onClose()">
     <div class="content">
         <p>Sorry, something went wrong</p>
 
