--- a/lib/errors/unauthorized/unathorized-error.component.html
+++ b/lib/errors/unauthorized/unathorized-error.component.html
@@ -1,3 +1,3 @@
-<sp-dialog title="Unauthorized error" [actions]="dialogActions">
+<sp-dialog title="Unauthorized error" [actions]="dialogActions" (close)="onClose()">
     <div class="content">You are not authorized to perform this action.</div>
 </sp-dialog>
