--- a/lib/app.component.html
+++ b/lib/app.component.html
@@ -14,6 +14,7 @@
         <router-outlet></router-outlet>
         <sp-unauthorized-error></sp-unauthorized-error>
         <sp-unhandled-error></sp-unhandled-error>
+        <sp-forbidden-error></sp-forbidden-error>
     </div>
 
 </sp-main>
