--- a/lib/account-management/sign-up/sign-up-form/sign-up-form.component.html
+++ b/lib/account-management/sign-up/sign-up-form/sign-up-form.component.html
@@ -1,3 +1,5 @@
+<h5>Create account</h5>
+
 <form name="sign-up" [ngFormModel]="form" class="form">
 
     <sp-input name="userName" placeholder="User name" [required]="true" [control]="userNameControl">
